--- a/answers/1.2
+++ b/answers/1.2
@@ -1,3 +1,14 @@
-This is the type of file you need to create to answer the questions in the TP.
+FROM python:3.8
 
-Write your answers directly in a file named according to each question in the statement (e.g. 1.4).
+WORKDIR /app
+
+COPY . /app
+
+RUN pip install --no-cache-dir -r requirements.txt
+
+EXPOSE 5000
+
+ENV NAME World
+
+CMD ["python3", "-m", "flask", "run", "--host=0.0.0.0"]
+
