--- a/answers/1.3
+++ b/answers/1.3
@@ -1,2 +1,3 @@
-docker build -t python_image .
-docker run -p 5000:5000 --name container_MLOPS python_image
+docker build -t python_image -f DOCKERFILE .
+docker run -p 8080:5000 -e CURRENT_ENVIRONMENT=production --name container_MLOPS python_image
+
