--- a/answers/1.5
+++ b/answers/1.5
@@ -1,1 +1,3 @@
-dfgce
+docker stop container_myapp
+docker rm container_myapp
+docker run -d -p 8080:5000 --name container_myapp -e CURRENT_ENVIRONMENT=development myapp
