--- a/answers/1.9.2
+++ b/answers/1.9.2
@@ -1,1 +1,1 @@
-docker rename container-flask-development container-flask-development-mlops
+©docker rename container-flask-development container-flask-development-mlops
