--- a/answers/1.5
+++ b/answers/1.5
@@ -1,1 +1,1 @@
-docker run -d -p 8080:5000 --name container_myapp -e CURRENT_ENVIRONMENT=development myapp
+docker run -d -p 8080:5000 --name container_myapp -e environment=development myapp
