--- a/answers/1.9.2
+++ b/answers/1.9.2
@@ -1,2 +1,3 @@
+docker stop container-flask-development 
 docker rename container-flask-development container-flask-development-mlops
 docker container-flask-development-mlops
