--- a/answers/1.9.2
+++ b/answers/1.9.2
@@ -1,3 +1,1 @@
-docker stop container-flask-development 
-docker rename container-flask-development container-flask-development-mlops
-docker container-flask-development-mlops
+docker run -d -p 8080:5000 --name new_container anouk1234/myapp
